# gowabi-web-scraper

./: README.md  clinics.csv  main.py  pyproject.toml
