[tool.poetry]
name = "botox-scraper"
version = "0.1.0"
description = "Scrap Gowabi for botox clinic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
pynvim = "^0.4.3"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
